--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ button:hover{
 <body>
 <div class="content">
 <h1>Exhale</h1>
-<p class="tagline">The AI executive for executive parents.</p>
+<p class="tagline">The AI executive for executive parents</p>
 <form id="waitlistForm">
 <div class="input-group" id="inputGroup">
 <div class="input-wrapper"><input type="email" placeholder="Enter your email" required></div>
@@ -101,4 +101,5 @@ document.getElementById('waitlistForm').onsubmit = function(e) {
 };
 </script>
 </body>
+
 </html>
