--- a/index.html
+++ b/index.html
@@ -1,105 +1,259 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Exhale</title>
-<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300" rel="stylesheet">
-<style>
-*{margin:0;padding:0;box-sizing:border-box}
-body{min-height:100vh;background:#000;display:flex;align-items:center;justify-content:center;font-family:Arial,sans-serif}
-.content{text-align:center;padding:40px 20px;animation:focusIn 2s ease-out forwards}
-@keyframes focusIn{
-    0%{filter:blur(25px);opacity:.2;transform:scale(1.03)}
-    20%{filter:blur(18px);opacity:.4}
-    40%{filter:blur(12px);opacity:.6}
-    60%{filter:blur(6px);opacity:.8}
-    80%{filter:blur(2px);opacity:.95}
-    100%{filter:blur(0);opacity:1;transform:scale(1)}
-}
-h1{font-family:'Cormorant Garamond',serif;font-weight:300;font-size:7rem;letter-spacing:.35em;color:#ADFBF6;text-transform:uppercase;margin-bottom:20px}
-.tagline{font-size:1.2rem;color:#ccc;letter-spacing:.1em;margin-bottom:50px}
-form{max-width:520px;margin:0 auto}
-.input-group{
-    display:flex;
-    background:linear-gradient(135deg,rgba(255,255,255,.1),rgba(255,255,255,.05));
-    backdrop-filter:blur(24px) saturate(180%);
-    -webkit-backdrop-filter:blur(24px) saturate(180%);
-    border-radius:16px;
-    padding:6px;
-    border:1px solid rgba(255,255,255,.18);
-    box-shadow:0 8px 32px rgba(0,0,0,.4),inset 0 1px 0 rgba(255,255,255,.2);
-    transition:all .4s
-}
-.input-group:hover{border-color:rgba(173,251,246,.3)}
-.input-group:focus-within{
-    border-color:rgba(173,251,246,.4);
-    box-shadow:0 12px 40px rgba(0,0,0,.45),0 0 60px rgba(173,251,246,.12)
-}
-.input-wrapper{flex:1}
-input{width:100%;padding:18px 24px;font-size:1rem;background:transparent;border:none;color:#fff;outline:none}
-input::placeholder{color:rgba(255,255,255,.45)}
-button{
-    padding:18px 36px;
-    font-size:.95rem;
-    font-weight:500;
-    letter-spacing:.05em;
-    background:linear-gradient(135deg,rgba(173,251,246,.2),rgba(173,251,246,.1));
-    backdrop-filter:blur(10px);
-    color:#ADFBF6;
-    border:1px solid rgba(173,251,246,.35);
-    border-radius:12px;
-    cursor:pointer;
-    transition:all .3s
-}
-button:hover{
-    background:linear-gradient(135deg,rgba(173,251,246,.3),rgba(173,251,246,.15));
-    border-color:rgba(173,251,246,.5);
-    color:#fff;
-    transform:translateY(-1px);
-    box-shadow:0 8px 30px rgba(173,251,246,.2)
-}
-.success{
-    display:none;
-    margin-top:24px;
-    padding:20px 28px;
-    background:linear-gradient(135deg,rgba(173,251,246,.12),rgba(173,251,246,.06));
-    backdrop-filter:blur(24px);
-    border:1px solid rgba(173,251,246,.25);
-    border-radius:12px;
-    color:#ADFBF6
-}
-.success.show{display:block;animation:fadeUp .6s}
-@keyframes fadeUp{from{opacity:0;transform:translateY(15px)}to{opacity:1;transform:translateY(0)}}
-.hidden{display:none}
-@media(max-width:768px){
-    h1{font-size:4rem;letter-spacing:.2em}
-    .input-group{flex-direction:column;padding:8px}
-    input{text-align:center}
-    button{width:100%;margin-top:8px}
-}
-@media(max-width:480px){h1{font-size:2.8rem}}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Exhale - Never Miss What Matters</title>
+    <meta name="description" content="Exhale is the AI-powered email assistant for busy executives and parents. Never miss an important Gmail message again.">
+
+    <!-- Premium Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="styles.css">
+
+    <!-- Lenis Smooth Scroll -->
+    <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
 </head>
 <body>
-<div class="content">
-<h1>Exhale</h1>
-<p class="tagline">The AI executive for executive parents</p>
-<form id="waitlistForm">
-<div class="input-group" id="inputGroup">
-<div class="input-wrapper"><input type="email" placeholder="Enter your email" required></div>
-<button type="submit">Join Waitlist</button>
-</div>
-<div class="success" id="successMsg">You're on the list! We'll be in touch soon.</div>
-</form>
-</div>
-<script>
-document.getElementById('waitlistForm').onsubmit = function(e) {
-    e.preventDefault();
-    document.getElementById('inputGroup').classList.add('hidden');
-    document.getElementById('successMsg').classList.add('show');
-};
-</script>
-</body>
+    <!-- Ambient Background Effects -->
+    <div class="ambient-orb ambient-orb-1"></div>
+    <div class="ambient-orb ambient-orb-2"></div>
+    <div class="ambient-orb ambient-orb-3"></div>
 
+    <!-- Dark Mode Toggle -->
+    <button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">
+        <span class="theme-toggle-icon sun">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <circle cx="12" cy="12" r="5"/>
+                <path d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"/>
+            </svg>
+        </span>
+        <span class="theme-toggle-icon moon">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>
+            </svg>
+        </span>
+        <div class="theme-toggle-track">
+            <div class="theme-toggle-thumb"></div>
+        </div>
+    </button>
+
+    <!-- Navigation -->
+    <nav class="nav">
+        <div class="nav-container">
+            <a href="#" class="nav-logo">Exhale</a>
+            <a href="#waitlist" class="nav-cta">Join Waitlist</a>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-content">
+            <div class="hero-badge">
+                <span class="badge-dot"></span>
+                Coming Soon
+            </div>
+            <h1 class="hero-title">
+                Never Miss What<br>
+                <span class="hero-title-accent">Truly Matters</span>
+            </h1>
+            <p class="hero-subtitle">
+                Exhale is the intelligent email assistant designed for busy executives and parents.
+                Let AI surface your most important Gmail messages so you can focus on what matters most.
+            </p>
+            <a href="#waitlist" class="hero-cta">
+                <span>Join the Waitlist</span>
+                <svg class="cta-arrow" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M5 12h14M12 5l7 7-7 7"/>
+                </svg>
+            </a>
+        </div>
+        <div class="hero-visual">
+            <div class="visual-card">
+                <div class="visual-card-header">
+                    <div class="visual-dots">
+                        <span></span><span></span><span></span>
+                    </div>
+                </div>
+                <div class="visual-card-content">
+                    <div class="visual-notification priority-high">
+                        <div class="notif-icon">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/>
+                                <polyline points="22 4 12 14.01 9 11.01"/>
+                            </svg>
+                        </div>
+                        <div class="notif-content">
+                            <span class="notif-label">Priority</span>
+                            <span class="notif-text">School pickup changed to 2:30 PM</span>
+                        </div>
+                    </div>
+                    <div class="visual-notification priority-medium">
+                        <div class="notif-icon">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <rect x="3" y="4" width="18" height="18" rx="2" ry="2"/>
+                                <line x1="16" y1="2" x2="16" y2="6"/>
+                                <line x1="8" y1="2" x2="8" y2="6"/>
+                                <line x1="3" y1="10" x2="21" y2="10"/>
+                            </svg>
+                        </div>
+                        <div class="notif-content">
+                            <span class="notif-label">Meeting</span>
+                            <span class="notif-text">Board meeting moved to Thursday</span>
+                        </div>
+                    </div>
+                    <div class="visual-notification priority-low">
+                        <div class="notif-icon">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
+                                <polyline points="22,6 12,13 2,6"/>
+                            </svg>
+                        </div>
+                        <div class="notif-content">
+                            <span class="notif-label">Filtered</span>
+                            <span class="notif-text">47 newsletters archived</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Features Section -->
+    <section class="features" id="features">
+        <div class="section-container">
+            <div class="section-header">
+                <span class="section-label">Why Exhale</span>
+                <h2 class="section-title">Email Intelligence,<br><span>Elevated</span></h2>
+            </div>
+            <div class="features-grid">
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+                            <path d="M12 2L2 7l10 5 10-5-10-5z"/>
+                            <path d="M2 17l10 5 10-5"/>
+                            <path d="M2 12l10 5 10-5"/>
+                        </svg>
+                    </div>
+                    <h3 class="feature-title">Intelligent Prioritization</h3>
+                    <p class="feature-desc">Our AI learns what matters to you—family updates, critical business decisions, time-sensitive requests—and brings them to the forefront.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+                            <circle cx="12" cy="12" r="10"/>
+                            <polyline points="12 6 12 12 16 14"/>
+                        </svg>
+                    </div>
+                    <h3 class="feature-title">Real-Time Alerts</h3>
+                    <p class="feature-desc">Receive instant notifications for emails that demand your attention, whether it's your child's school or an urgent client request.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+                            <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/>
+                        </svg>
+                    </div>
+                    <h3 class="feature-title">Privacy First</h3>
+                    <p class="feature-desc">Your emails remain yours. Exhale processes locally when possible and never stores your personal correspondence.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+                            <rect x="2" y="3" width="20" height="14" rx="2" ry="2"/>
+                            <line x1="8" y1="21" x2="16" y2="21"/>
+                            <line x1="12" y1="17" x2="12" y2="21"/>
+                        </svg>
+                    </div>
+                    <h3 class="feature-title">Seamless Integration</h3>
+                    <p class="feature-desc">Works quietly with Gmail, delivering insights across your devices without disrupting your existing workflow.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Social Proof Section -->
+    <section class="social-proof">
+        <div class="section-container">
+            <div class="proof-content">
+                <div class="proof-stat">
+                    <span class="stat-number">200+</span>
+                    <span class="stat-label">Hours saved yearly per user</span>
+                </div>
+                <div class="proof-divider"></div>
+                <div class="proof-stat">
+                    <span class="stat-number">99.2%</span>
+                    <span class="stat-label">Priority email accuracy</span>
+                </div>
+                <div class="proof-divider"></div>
+                <div class="proof-stat">
+                    <span class="stat-number">0</span>
+                    <span class="stat-label">Critical emails missed</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Waitlist Section -->
+    <section class="waitlist" id="waitlist">
+        <div class="section-container">
+            <div class="waitlist-wrapper">
+                <div class="waitlist-content">
+                    <span class="section-label">Early Access</span>
+                    <h2 class="waitlist-title">Be Among the First</h2>
+                    <p class="waitlist-desc">Join our exclusive waitlist and be the first to experience email management reimagined. Early supporters receive priority access and founding member benefits.</p>
+                </div>
+                <div class="waitlist-form-container">
+                    <form class="waitlist-form" id="waitlistForm">
+                        <div class="form-group">
+                            <input
+                                type="email"
+                                name="email"
+                                id="email"
+                                placeholder="Enter your email address"
+                                required
+                                autocomplete="email"
+                            >
+                            <button type="submit" class="submit-btn" id="submitBtn">
+                                <span class="btn-text">Join Waitlist</span>
+                                <span class="btn-loader"></span>
+                            </button>
+                        </div>
+                        <p class="form-note">No spam. Unsubscribe anytime. We respect your inbox.</p>
+                    </form>
+                    <div class="success-message" id="successMessage">
+                        <svg class="success-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/>
+                            <polyline points="22 4 12 14.01 9 11.01"/>
+                        </svg>
+                        <div class="success-text">
+                            <span class="success-title">You're on the list!</span>
+                            <span class="success-subtitle">We'll be in touch soon with exclusive updates.</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-brand">
+                <span class="footer-logo">Exhale</span>
+                <p class="footer-tagline">Breathe easy. Never miss what matters.</p>
+            </div>
+            <div class="footer-links">
+                <a href="#">Privacy</a>
+                <a href="#">Terms</a>
+                <a href="#">Contact</a>
+            </div>
+            <p class="footer-copy">&copy; 2025 Exhale. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
 </html>
